k8s/cart-service.yaml
# k8s/cart/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: shop
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
  - port: 8080
    targetPort: 8080
