k8s/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: shop
  labels:
    app: catalog
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
  - port: 8080
    targetPort: 8080    
    protocol: TCP
    name: http
  - port: 5001
    targetPort: 5001    
    name: grpc
